lox-tests/tests/field/set_on_function.stderr
ERROR: Only class instances have fields, not objects of type <fn>
 --> 3:1
  |
3 | foo.bar = "value"; // expect runtime error: Only instances have fields.
  | ^-----^
